Finished adding login status indicator to single-player page. Made header stay at top of page (instead of position: fixed), fixed bug where login status indicator submenu appeared behind message feed, and made dice stay under message feed even on small screens (otherwise dice would overlap with login status indicator).

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -10,7 +10,7 @@ body > header {
 	justify-content: center;
 	height: 80px;
 	width: 100%;
-	z-index: 1;
+	z-index: 2;
 }
 
 body > .main {
