--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -570,7 +570,8 @@ html.webp {
 }
 
 @media (any-pointer: coarse) {
-	.feed {
+	.feed,
+	.dice {
 		pointer-events: none;
 	}
 }
@@ -627,10 +628,10 @@ html.webp {
 	gap: 10px;
 	perspective: 5000px;
 	position: fixed;
-	right: 15px;
-	top: 25px;
 	z-index: 1;
 	transition: top ease-out 0.75s;
+	margin-left: 15px;
+	top: 175px;
 }
 
 @media (min-height: 648px) and (min-width: 768px) {
